--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
 ---
 ---
-{% assign theme_asset_path = "/assets/themes/twitter" %}
-{% include themes/twitter/default.html %}
+{% assign theme_asset_path = "/assets/themes/v2ex" %}
+{% include themes/v2ex/default.html %}
