--- a/_includes/themes/v2ex/default.html
+++ b/_includes/themes/v2ex/default.html
@@ -14,6 +14,8 @@
     <!-- Le styles -->
     <link href="{{ theme_asset_path }}/css/1.4.0/bootstrap.css" rel="stylesheet">
     <link href="{{ theme_asset_path }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    
+    <link href="/atom.xml" rel="alternate" type="application/atom+xml">
 
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
