--- a/assets/themes/v2ex/css/style.css
+++ b/assets/themes/v2ex/css/style.css
@@ -1,6 +1,7 @@
 /* Override some defaults */
 html, body {
   background-color: #eee;
+  font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", STHeiti !important;
 }
 body {
   padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
