--- a/assets/themes/v2ex/css/style.css
+++ b/assets/themes/v2ex/css/style.css
@@ -4,13 +4,30 @@ html, body {
   font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", STHeiti !important;
 }
 body {
+  background-color: #d0d0d0;
+  background-image: url("http://www.v2ex.com/static/img/bg_grid.png");
+  background-repeat: repeat;
   padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
 }
+.container > footer {
+  border-top: none;
+}
 .container > footer p {
+  color: #999;
+  font-size: 1.0em;
   text-align: center; /* center align it with the container */
+}
+.container > footer p > a {
+  color: #555;
 }
 .container {
   width: 820px; /* downsize our container to make the content feel a bit tighter and more cohesive. NOTE: this removes two full columns from the grid, meaning you only go to 14 columns and not 16. */
+}
+ul li {
+  font-size: 1.1em;
+  line-height: 180%;
+  color: #333;
+  list-style: square;
 }
 
 /* The white background content wrapper */
@@ -31,6 +48,10 @@ body {
   background-color: #f5f5f5;
   padding: 20px 20px 10px;
   margin: -20px -20px 20px;
+}
+
+.topbar > .fill {
+  background-image: url("http://www.v2ex.com/static/img/top.png");
 }
 
 .topbar .btn {
