First of many changes to follow.

--- a/_includes/themes/v2ex/default.html
+++ b/_includes/themes/v2ex/default.html
@@ -48,7 +48,7 @@
       </div>
 
       <footer>
-        <p><a href="http://www.v2ex.com/" target="_blank">V2EX</a> &nbsp;·&nbsp; <a href="https://www.v2edge.com/" target="_blank" title="Global Cloud Platform to manage user experience">V2EDGE</a><br />&copy; {{ site.author.name }} 2012-2013 
+        <p><a href="http://www.v2ex.com/" target="_blank">V2EX</a><br />&copy; {{ site.author.name }} 2015 
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
