--- a/assets/themes/v2ex/css/style.css
+++ b/assets/themes/v2ex/css/style.css
@@ -1,19 +1,20 @@
 /* Override some defaults */
-html, body {
-  background-color: #eee;
+html {
+  background-color: #fff;
+  background-image: url("//cdn.v2ex.co/assets/bgs/abovetheclouds.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 0;
   font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", STHeiti !important;
 }
 body {
-  background-color: #d0d0d0;
-  background-image: url("http://www.v2ex.com/static/img/bg_grid.png");
-  background-repeat: repeat;
   padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
+  background-color: transparent;
 }
 .container > footer {
   border-top: none;
 }
 .container > footer p {
-  color: #999;
+  color: rgba(0, 0, 0, 0.25);
   font-size: 1.0em;
   text-align: center; /* center align it with the container */
 }
@@ -51,11 +52,18 @@ ul li {
 }
 
 .topbar > .fill {
-  background-image: url("http://www.v2ex.com/static/img/top.png");
 }
 
 .topbar .btn {
   border: 0;
+}
+
+a:link {
+  color: #778087;
+}
+
+a:visited {
+  color: #677076;
 }
 
 
