Improvements for HTML5/XHTML specifications.

--- a/_includes/themes/v2ex/default.html
+++ b/_includes/themes/v2ex/default.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
     <title>{{ page.title }}</title>
-    {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
-    <meta name="author" content="{{ site.author.name }}">
+    {% if page.description %}<meta name="description" content="{{ page.description }}"/>{% endif %}
+    <meta name="author" content="{{ site.author.name }}"/>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -12,17 +12,17 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="{{ theme_asset_path }}/css/1.4.0/bootstrap.css" rel="stylesheet">
-    <link href="{{ theme_asset_path }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="{{ theme_asset_path }}/css/1.4.0/bootstrap.css" rel="stylesheet"/>
+    <link href="{{ theme_asset_path }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all"/>
     
-    <link href="/atom.xml" rel="alternate" type="application/atom+xml">
+    <link href="/atom.xml" rel="alternate" type="application/atom+xml"/>
 
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
-    <link rel="shortcut icon" href="images/favicon.ico">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="images/favicon.ico"/>
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png"/>
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png"/>
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png"/>
   -->
   </head>
 
