My posts are in.

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -17,6 +17,7 @@ $brand-color:      #2a7ae2 !default;
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
+$header-color:     #f5f5f5;
 
 $table-text-align: left !default;
 
