--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -216,7 +216,7 @@
 }
 
 .post-title {
-  @include relative-font-size(2.625);
+  @include relative-font-size(2.5);
   letter-spacing: -1px;
   line-height: 1;
 
@@ -251,4 +251,20 @@
       @include relative-font-size(1.125);
     }
   }
+}
+
+.video-responsive{
+  overflow:hidden;
+  padding-bottom:56.25%;
+  position:relative;
+  height:0;
+  margin-bottom: $spacing-unit / 2;
+}
+
+.video-responsive iframe{
+  left:0;
+  top:0;
+  height:100%;
+  width:100%;
+  position:absolute;
 }
