--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -11,13 +11,13 @@ $base-line-height: 1.5 !default;
 $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
-$background-color: #fdfdfd !default;
+$background-color: #f0f0f0 !default;
 $brand-color:      #2a7ae2 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
-$header-color:     #f5f5f5;
+$header-color:     #e9e9e9;
 
 $table-text-align: left !default;
 
