--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -12,7 +12,8 @@ $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
 $background-color: #f0f0f0 !default;
-$brand-color:      #2a7ae2 !default;
+// $brand-color:      #2a7ae2 !default;
+$brand-color:      #ff9900 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
