--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,13 +4,15 @@ layout: default
 
 <div class="home">
   {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
+    <!--<h1 class="page-heading">{{ page.title }}</h1>-->
   {%- endif -%}
 
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
+    <!--<h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>-->
+    <h2 class="post-list-heading"><img src="/assets/posts.png" border="0" width="24" alt="Posts" /></h2>
+
     <ul class="post-list">
       {%- for post in site.posts -%}
       <li>
@@ -28,7 +30,7 @@ layout: default
       {%- endfor -%}
     </ul>
 
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+    <p class="rss-subscribe"><img src="/assets/subscribe.png" border="0" width="24" alt="Subscribe" style="vertical-align: text-top;" /> Subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%}
 
 </div>
