--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -7,11 +7,12 @@
   // Positioning context for the mobile navigation icon
   position: relative;
   background-color: $header-color;
+  background-image: url("/assets/memphis-colorful.png");
 }
 
 .site-title {
   @include relative-font-size(1.625);
-  font-weight: 300;
+  font-weight: 600;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
   margin-bottom: 0;
@@ -21,6 +22,9 @@
   &:visited {
     color: $grey-color-dark;
   }
+}
+
+.site-title:hover {
 }
 
 .site-nav {
@@ -106,6 +110,8 @@
  */
 .site-footer {
   background-color: $header-color;
+  background-image: url("/assets/dark.png");
+  color: #ccc;
   padding: $spacing-unit 0;
 }
 
@@ -202,9 +208,28 @@
 }
 
 .post-link {
-  display: block;
+  display: inline-block;
   @include relative-font-size(1.5);
+  background-color: #000;
+  color: #fff;
+  padding: 0px 10px 0px 10px;
 }
+
+.post-link:link {
+  color: #fff;
+}
+
+.post-link:visited {
+  color: #f0f0f0;
+}
+
+.post-link:hover {
+  color: #000;
+  background-color: #ff9900;
+  text-decoration: none;
+}
+
+
 
 
 
@@ -219,6 +244,11 @@
   @include relative-font-size(2.5);
   letter-spacing: -1px;
   line-height: 1;
+
+  background-color: #000;
+  color: #fff;
+  padding: 5px 10px 5px 10px;
+  display: inline-block;
 
   @include media-query($on-laptop) {
     @include relative-font-size(2.25);
