--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -212,6 +212,7 @@
   @include relative-font-size(1.5);
   background-color: #000;
   color: #fff;
+  transition: box-shadow 0.15s, padding 0.15s;
   padding: 0px 10px 0px 10px;
 }
 
@@ -227,6 +228,8 @@
   color: #000;
   background-color: #ff9900;
   text-decoration: none;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+  padding: 2px 14px 2px 14px;
 }
 
 
