--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -229,7 +229,7 @@
   background-color: #ff9900;
   text-decoration: none;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
-  padding: 2px 14px 2px 14px;
+  padding: 0px 10px 0px 10px;
 }
 
 
@@ -284,6 +284,11 @@
       @include relative-font-size(1.125);
     }
   }
+}
+
+.post-ads {
+  height: 90px;
+  background-color: transparent;
 }
 
 .video-responsive{
