--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,5 +1,27 @@
 @charset "utf-8";
 
+// CSS variables
+
+:root {
+  --text-color: #111;
+  --background-color: #f0f0f0;
+  --code-background-color: #eef;
+  --site-title-color: #424242;
+  --site-header-background-color: #e9e9e9;
+  --border-color: #e8e8e8;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --text-color: #dddcdd;
+    --background-color: #1e1c1f;
+    --code-background-color: #373738;
+    --site-title-color: #f0f0f0;
+    --site-header-background-color: #3c3b40;
+    --border-color: #232225;
+  }
+}
+
 // Define defaults for each variable.
 
 $base-font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", "Microsoft Yahei", sans-serif;
