A new post about Dark Mode support.

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -103,7 +103,7 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  color: $brand-color;
+  color: var(--link-color);
   text-decoration: none;
 
   &:visited {
@@ -111,7 +111,7 @@ a {
   }
 
   &:hover {
-    color: $text-color;
+    color: var(--link-color);
     text-decoration: underline;
   }
 
