--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -9,6 +9,7 @@
   --site-title-color: #424242;
   --site-header-background-color: #e9e9e9;
   --border-color: #e8e8e8;
+  --link-color: #ff9900;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,6 +20,7 @@
     --site-title-color: #f0f0f0;
     --site-header-background-color: #3c3b40;
     --border-color: #232225;
+    --link-color: #ff9900;
   }
 }
 
