--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -10,6 +10,7 @@
   --site-header-background-color: #e9e9e9;
   --border-color: #e8e8e8;
   --link-color: #ff9900;
+  --hr-color: #ccc;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -21,6 +22,7 @@
     --site-header-background-color: #3c3b40;
     --border-color: #232225;
     --link-color: #ff9900;
+    --hr-color: #333;
   }
 }
 
