--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -40,6 +40,14 @@ ul, ol, dl, figure,
   margin-bottom: $spacing-unit / 2;
 }
 
+h2 {
+  margin-top: $spacing-unit;
+}
+
+h2:first-child {
+  margin-top: none;
+}
+
 
 
 /**
