Remove darken from a:visited

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -115,7 +115,7 @@ a {
   text-decoration: none;
 
   &:visited {
-    color: darken($brand-color, 15%);
+    color: $brand-color;
   }
 
   &:hover {
