Change the brand color

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -226,7 +226,7 @@
 
 .post-link:hover {
   color: #000;
-  background-color: #ff9900;
+  background-color: $brand-color;
   text-decoration: none;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
   padding: 0px 10px 0px 10px;
