--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,17 +1,6 @@
 @charset "utf-8";
 
-// CSS variables
 
-:root {
-  --text-color: #111;
-  --background-color: #f0f0f0;
-  --code-background-color: #eef;
-  --site-title-color: #424242;
-  --site-header-background-color: #e9e9e9;
-  --border-color: #e8e8e8;
-  --link-color: #ff9900;
-  --hr-color: #ccc;
-}
 
 // Define defaults for each variable.
 
@@ -26,7 +15,7 @@ $spacing-unit:     30px !default;
 $text-color:       #111 !default;
 $background-color: #f0f0f0 !default;
 // $brand-color:      #2a7ae2 !default;
-$brand-color:      #ff9900 !default;
+$brand-color:      #969cb1 !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
@@ -58,6 +47,19 @@ $on-laptop:        800px !default;
   font-size: $base-font-size * $ratio;
 }
 
+// CSS variables
+
+:root {
+  --text-color: #111;
+  --background-color: #f0f0f0;
+  --code-background-color: #eef;
+  --site-title-color: #424242;
+  --site-header-background-color: #e9e9e9;
+  --border-color: #e8e8e8;
+  --link-color: $brand-color;
+  --hr-color: #ccc;
+}
+
 // Import partials.
 @import
   "minima/base",
@@ -73,7 +75,7 @@ $on-laptop:        800px !default;
     --site-title-color: #f0f0f0;
     --site-header-background-color: #3c3b40;
     --border-color: #232225;
-    --link-color: #ff9900;
+    --link-color: $brand-color;
     --hr-color: #333;
   }
 
