--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   {%- feed_meta -%}
   <link type="application/jso
-n" rel="alternate" href="{{ site.url }}/feed.json" title="{{ site.title | jsonify }}">
+n" rel="alternate" href="{{ site.url }}/feed.json" title="{{ site.title }}">
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
