--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,7 @@
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   {%- feed_meta -%}
-  <link type="application/jso
-n" rel="alternate" href="{{ site.url }}/feed.json" title="{{ site.title }}">
+  <link type="application/feed+json" rel="alternate" href="{{ site.url }}/feed.json" title="{{ site.title }}">
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
