--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -52,7 +52,7 @@
   @include media-query($on-palm) {
     position: absolute;
     top: 9px;
-    right: $spacing-unit / 2;
+    right: calc($spacing-unit / 2);
     background-color: var(--background-color);
     border: 1px solid var(--border-color);
     border-radius: 5px;
@@ -117,7 +117,7 @@
 
 .footer-heading {
   @include relative-font-size(1.125);
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: calc($spacing-unit / 2);
 }
 
 .contact-list,
