Add: Installing Jekyll on macOS Ventura

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -52,7 +52,7 @@ $on-laptop:        800px !default;
 :root {
   --text-color: #111;
   --background-color: #f0f0f0;
-  --code-background-color: #eef;
+  --code-background-color: #f9f9f9;
   --site-title-color: #424242;
   --site-header-background-color: #e9e9e9;
   --border-color: #e8e8e8;
